test/functions/jturner/lambda_type_ret_type.good
lambda_type_ret_type.chpl:1: error: 'type' return types are not allowed in lambdas
