test/functions/jturner/lambda_type_ret_type.chpl
var f = lambda() type { return int; };

var i:f() = 4;

writeln(i);